Fix padding, we have no scrollbars to adjust for anymore!

--- a/themes/Default/fixes.less
+++ b/themes/Default/fixes.less
@@ -58,9 +58,9 @@ header {
       white-space: nowrap;
     }
   }
-  .navbar-right {
-    margin-right:10px!important;
-  }
+  // .navbar-right {
+  //   margin-right:10px!important;
+  // }
 }
 main > div {
   overflow-x: auto;
